# BlenderGym

./: .gitignore  CLAUDE.md  README.md  evaluation.py  inference.py  inference_retry.py  pyproject.toml  query_vllm.py  start_evaluation.py
docs/: vllm-endpoints.md
results/: paper_split_manifest.json
system/: agents.py
