[project]
name = "blendergym"
version = "0.1.0"
description = "Benchmark and harness for VLM systems on Blender 3D scene-editing tasks (geometry, material, blendshape, placement, lighting)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools>=78.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "system",
    "system.*",
]

# ── Pixi workspace ──────────────────────────────────────────────────

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]
preview = ["pixi-build"]

[tool.pixi.package]
name = "blendergym"
version = "0.1.0"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*" }

[tool.pixi.package.host-dependencies]
python = "3.13.*"
setuptools = ">=78.1"

[tool.pixi.dependencies]
python = "3.13.*"
pip = "*"
blendergym = { path = "." }

# Core scientific computing
numpy = ">=2,<3"
numba = ">=0.61,<0.62"
scipy = ">=1.17.0,<2"
scikit-learn = ">=1.8.0"
pandas = ">=3.0.0,<4"

# Visualization & rendering
matplotlib = ">=3.10.8,<4"
pillow = ">=12.1.0"
open3d = ">=0.19.0"
pyvista = "*"
vtk = ">=9.5.2"
# Mesh rendering for KeypointNet 2D-named-keypoint task
# (data_creation/keypointnet/render_dataset.py uses pyrender + trimesh + Embree).
pyrender = ">=0.1.45,<0.2"
pyrr = ">=0.10.3,<0.11"
# 3D clustering (used by ZeroKey's multi-view keypoint aggregation; needed
# when we extend the named-keypoint pipeline to 3D).
fast_hdbscan = ">=0.2.2,<0.3"

# ML infrastructure
einops = ">=0.3.0"
potpourri3d = ">=1.1.0"
fvcore = ">=0.1.5.post20221221,<0.2"
iopath = ">=0.1.10"

# geo_aware dependencies
loguru = ">=0.5.3"
faiss-cpu = "*"
omegaconf = "*"

# Data & serialization
h5py = ">=3.15.1"
# SPair-71k requires datasets <4 (incompatible API changes in v4)
datasets = ">=3.0.0,<4"
huggingface_hub = ">=1.5.0,<2"
# opentelemetry-api (vllm transitive dep) needs importlib-metadata <8.5
importlib-metadata = ">=6.0,<8.5"
safetensors = ">=0.7.0"

# NLP / tokenization / API
openai = ">=2.21.0,<3"
tokenizers = ">=0.22.2"

# Mesh processing
igl = "*"
plyfile = ">=1.1"
trimesh = "*"

# Monitoring & logging
wandb = "*"
tqdm = ">=4.67.3,<5"
rich = ">=14.3.2"
termcolor = "*"

# CLI & config
click = ">=8.3.1"
fire = ">=0.7.1"
configargparse = ">=1.7.1"
pyyaml = ">=6.0.3"

# Misc utilities
networkx = ">=3.6.1"
psutil = ">=7.2.2"
filelock = ">=3.20.3"
fsspec = ">=2023.1.0"
setuptools = ">=80.10.2,<81"
setuptools-scm = "*"

# OpenCV
opencv = ">=4.13.0"

# Compilers for building CUDA extensions
# System GCC 8.5 is too old for PyTorch (needs 9+)
# CUDA 13.0 officially supports up to GCC 13.2
# Use gxx_linux-64 (wrapper) instead of gxx (meta) — the wrapper package
# provides etc/conda/activate.d scripts that set LDFLAGS with
# -Wl,--allow-shlib-undefined, required to link against conda's libstdc++
# (otherwise linker fails with "undefined reference to `dladdr@GLIBC_2.2.5`").
gxx_linux-64 = ">=11,<13.3"

# 3D visualization & geometry
robust-laplacian = "*"

# LLM API
google-genai = ">=1.63.0,<2"
anthropic = ">=0.79.0,<1"
cmake = ">=4.2.3"
ninja = ">=1.13.2"
plotly = ">=6.5.2,<7"
imageio = ">=2.37.0,<3"
pydantic = ">=2.12.5,<3"
sympy = ">=1.14.0,<2"
scikit-image = ">=0.26.0,<0.27"
seaborn = ">=0.13.2,<0.14"
lark = "==1.2.2"
jupyter = ">=1.1.1,<2"
beautifulsoup4 = ">=4.14.3,<5"
pytest = ">=9.0.2,<10"

# Dev tools (linting, formatting, type checking)
pyright = ">=1.1"
conda = ">=26.1.0"
mamba = ">=2.5.0"
uv = ">=0.10.0"
black = ">=26.1.0,<27"
flake8 = ">=7.3.0,<8"
flake8-comprehensions = ">=3.17.0,<4"
flake8-bugbear = ">=25.11.29,<26"
usort = ">=1.1.3,<2"
scipy-stubs = ">=1.17.0.2,<2"
hydra-core = ">=1.3.2,<2"
pandoc = ">=3.9.0.2,<4"
pypandoc = ">=1.17,<2"
git = ">=2.53.0,<3"
git-lfs = ">=3.7.1,<4"
gh = ">=2.92.0,<3"
glab = ">=1.99.0,<2"
nbstripout = ">=0.9.1,<0.10"
nodejs = ">=25.8.2,<25.9"
shellcheck = ">=0.11.0,<0.12"
clang-tools = ">=22.1.4,<23"


[tool.pixi.pypi-dependencies]
# PyTorch 2.10 with CUDA 13.0 support (resolved via extra-index-urls below)
torch = ">=2.10.0,<2.11"
torchvision = "*"
torchaudio = "*"
triton = "*"

# PyTorch ecosystem
torchmetrics = "*"
torch-geometric = "*"
xformers = ">=0.0.34"
peft = ">=0.10"
accelerate = ">=1.12.0"
timm = ">=1.0.24"
transformers = ">=5.5.1"
fbgemm-gpu = ">=1.5.0"

# Only packages not available on conda
info-nce-pytorch = ">=0.1.4"
fast-simplification = "*"
polyscope = "*"
# Embree3 ray-tracing bindings used by trimesh.ray.ray_pyembree
# (mesh visibility/depth in data_creation/keypointnet/render_dataset.py).
embreex = ">=2.17.7,<3"
# Surface point sampling used by data_creation/keypointnet/render_dataset.py.
point-cloud-utils = ">=0.34.0,<0.35"
# Build PyTorch3D from fork with torch-aware build config.
pytorch3d = { git = "https://github.com/Wenri/pytorch3d.git" }

[tool.pixi.pypi-options]
# PyTorch cu130 wheels
extra-index-urls = ["https://download.pytorch.org/whl/cu130"]
no-build-isolation = ["lvis"]
index-strategy = "unsafe-best-match"

[tool.pixi.system-requirements]
cuda = "13.0"

[tool.pixi.activation.env]
# Tokens — replace <REDACTED> with real values in your local copy
HF_TOKEN = "<REDACTED>"
GEMINI_API_KEY = "<REDACTED>"
GEMINI_API_KEY_B = "<REDACTED>"
MOONSHOT_API_KEY = "<REDACTED>"
MOONSHOT_API_KEY_B = "<REDACTED>"
ANTHROPIC_API_KEY = "<REDACTED>"
ANTHROPIC_API_KEY_B = "<REDACTED>"
CHATGPT_ACCESS_TOKEN = "<REDACTED>"
KAGI_LINK_TOKEN = "<REDACTED>"
# Build/runtime parallelism — set in ~/.zprofile so they apply to pixi install too
CMAKE_BUILD_PARALLEL_LEVEL = "64"
MAX_JOBS = "64"
OMP_NUM_THREADS = "64"
MKL_NUM_THREADS = "64"
OPENBLAS_NUM_THREADS = "64"
VECLIB_MAXIMUM_THREADS = "64"
NUMEXPR_NUM_THREADS = "64"
# Cache directories (all under project root)
HF_HOME = "$PIXI_PROJECT_ROOT/.cache/huggingface"
TORCH_HOME = "$PIXI_PROJECT_ROOT/.cache/torch"
WANDB_DIR = "$PIXI_PROJECT_ROOT/.cache/wandb"
TRITON_CACHE_DIR = "$PIXI_PROJECT_ROOT/.cache/triton"
# CUDA
CUDA_HOME = "/usr/local/cuda-13.0"
LD_LIBRARY_PATH = "$CONDA_PREFIX/lib:$LD_LIBRARY_PATH"
# Compilers
CC = "$CONDA_PREFIX/bin/x86_64-conda-linux-gnu-gcc"
CXX = "$CONDA_PREFIX/bin/x86_64-conda-linux-gnu-g++"
CPP = "$CONDA_PREFIX/bin/x86_64-conda-linux-gnu-cpp"
CUDAHOSTCXX = "$CONDA_PREFIX/bin/x86_64-conda-linux-gnu-g++"
# Build tools
AR = "$CONDA_PREFIX/bin/x86_64-conda-linux-gnu-ar"
LD = "$CONDA_PREFIX/bin/x86_64-conda-linux-gnu-ld"
NM = "$CONDA_PREFIX/bin/x86_64-conda-linux-gnu-nm"
RANLIB = "$CONDA_PREFIX/bin/x86_64-conda-linux-gnu-ranlib"
STRIP = "$CONDA_PREFIX/bin/x86_64-conda-linux-gnu-strip"

[tool.pixi.tasks]
typecheck = "pyright system/ TaskSolver/ *.py"

# ── vLLM feature (adds vllm serving on top of shared torch 2.10 stack) ──

[tool.pixi.feature.vllm.pypi-dependencies]
vllm = { git = "https://github.com/Wenri/vllm.git", branch = "cu130-torch2.10" }

[tool.pixi.feature.vllm.activation.env]
# NCCL net plugin segfaults with pip-installed NCCL; force socket transport
NCCL_NET = "Socket"

[tool.pixi.feature.vllm.tasks]
# Qwen3-VL 235B MoE (22B active) — FP8, 4×H100
serve-qwen3 = "vllm serve Qwen/Qwen3-VL-235B-A22B-Thinking-FP8 --tensor-parallel-size 4 --enable-expert-parallel --max-model-len 4096 --port 8000"
# GLM-4.6V 106B MoE — BF16, 4×H100
serve-glm = "vllm serve zai-org/GLM-4.6V --tensor-parallel-size 4 --enable-expert-parallel --max-model-len 4096 --port 8000 --enforce-eager"
# Qwen3-VL 32B Instruct — BF16, 2×H100
serve-qwen-vl = "vllm serve Qwen/Qwen3-VL-32B-Instruct --tensor-parallel-size 2 --max-model-len 4096 --port 8000"
# Mistral Large 3 675B MoE (41B active) — NVFP4 quantized, 4×H100
serve-mistral = "vllm serve mistralai/Mistral-Large-3-675B-Instruct-2512-NVFP4 --tensor-parallel-size 4 --enable-expert-parallel --max-model-len 4096 --port 8000"

[tool.pixi.environments]
default = { solve-group = "default" }
vllm = { features = ["vllm"], solve-group = "default" }
